# ecs-custom

./: .gitignore  Cargo.toml
ecs-basic/: Cargo.toml
ecs-basic/src/: archetype.rs  entity.rs  lib.rs  query.rs  world.rs
ecs-complete/: Cargo.toml  README.md
ecs-complete/benches/: ecs_bench.rs
ecs-complete/src/: archetype.rs  command.rs  component.rs  ecs_bench.rs  entity.rs  error.rs  events.rs  hierarchy.rs  lib.rs  query.rs  resource.rs  system.rs  world.rs
ecs-parallel/: Cargo.toml
ecs-parallel/src/: lib.rs  parallel_systems.rs  query.rs  system.rs  world.rs
ecs-slotmap/: Cargo.toml
ecs-slotmap/src/: archetype.rs  entity.rs  lib.rs  main.rs  query.rs  system.rs
